--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,9 @@ flask-wtf = "*"
 flask-sqlalchemy = "*"
 flask-migrate = "*"
 flask-mail = "*"
+flask-login = "*"
+werkzeug = "*"
+itsdangerous = "*"
 
 [requires]
 python_version = "3.7"
